Fix: trying to fix animation bg on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -132,19 +132,19 @@ body {
 }
 
 @keyframes animate {
-  0% {
-    transform: scale(0) translateY(-90px) rotate(360deg);
-    visibility: hidden;
-    opacity: 0;
-  }
+
   0% {
     transform: scale(0) translateY(-90px) rotate(360deg);
     opacity: 1;
   }
   
-  100% {
+  95% {
     transform: scale(1.3) translateY(-90px) rotate(-180deg);
     border-radius: 50%;
     opacity: 0;
+  }
+  100% {
+    height: 0px;
+    width: 0px;
   }
 }
